--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@mantine/core": "^7.11.1",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "mapbox-gl": "^3.5.1",
     "next": "14.2.4",
     "next-google-fonts": "^2.2.0",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "sunrise-sunset-js": "^2.2.1",
     "swr": "^2.2.5"
