--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next-google-fonts": "^2.2.0",
     "react": "^18",
     "react-bootstrap": "^2.10.4",
+    "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "sunrise-sunset-js": "^2.2.1",
