--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-calendar": "^5.0.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "sunrise-sunset-js": "^2.2.1",
     "swr": "^2.2.5"
   },
